Add HigherCLose with filter strategies

--- a/YahooDownload.cfg
+++ b/YahooDownload.cfg
@@ -163,6 +163,7 @@ BIIB,BIOGEN IDEC Inc.,SP500
 BK,The Bank of New York Mellon Corp.,SP500
 BLK,Blackrock,SP500
 BLL,Ball Corp,SP500
+BMC,BMC Software,SP500
 BMS,Bemis Company,SP500
 BMY,Bristol-Myers Squibb,SP500
 BRCM,Broadcom Corporation,SP500
@@ -179,8 +180,9 @@ CAT,Caterpillar Inc.,SP500
 CB,Chubb Corp.,SP500
 CBG,CBRE,SP500
 CBS,CBS Corp.,SP500
-CCE,Coca-Cola Enterprises,SP500
+CCE,COCA-COLA ENTERPRIS,SP500
 CCL,Carnival Corp.,SP500
+CEG,Constellation Energy Group,SP500
 CELG,Celgene Corp.,SP500
 CERN,Cerner,SP500
 CF,CF Industries Holdings Inc,SP500
@@ -219,6 +221,7 @@ CVH,Coventry Health Care Inc.,SP500
 CVS,CVS Caremark Corp.,SP500
 CVX,Chevron Corp.,SP500
 D,Dominion Resources,SP500
+DAL,Delta Airlines,SP500
 DD,Du Pont (E.I.),SP500
 DE,Deere & Co.,SP500
 DF,Dean Foods,SP500
@@ -276,7 +279,7 @@ FLIR,FLIR Systems,SP500
 FLR,Fluor Corp.,SP500
 FLS,Flowserve Corporation,SP500
 FMC,FMC Corporation,SP500
-FRX,Forest Laboratories,SP500
+FO,FORTUNE BRANDS INC,SP500
 FSLR,First Solar Inc,SP500
 FTI,FMC Technologies Inc.,SP500
 FTR,Frontier Communications,SP500
@@ -293,7 +296,6 @@ GNW,Genworth Financial Inc.,SP500
 GOOG,Google Inc.,SP500
 GPC,Genuine Parts,SP500
 GPS,Gap (The),SP500
-GR,Goodrich Corporation,SP500
 GS,Goldman Sachs Group,SP500
 GT,Goodyear Tire & Rubber,SP500
 GWW,Grainger (W.W.) Inc.,SP500
@@ -329,6 +331,7 @@ IPG,Interpublic Group,SP500
 IR,Ingersoll-Rand PLC,SP500
 IRM,Iron Mountain Incorporated,SP500
 ISRG,Intuitive Surgical Inc.,SP500
+ITT,ITT CORPORATION,SP500
 ITW,Illinois Tool Works,SP500
 IVZ,Invesco Ltd.,SP500
 JBL,Jabil Circuit,SP500
@@ -337,6 +340,7 @@ JCP,Penney (J.C.),SP500
 JEC,Jacobs Engineering Group,SP500
 JNJ,Johnson & Johnson,SP500
 JNPR,Juniper Networks,SP500
+JNS,JANUS CAPITAL GROUP,SP500
 JOY,Joy Global Inc.,SP500
 JPM,JPMorgan Chase & Co.,SP500
 JWN,Nordstrom,SP500
@@ -378,8 +382,6 @@ MCO,Moody's Corp,SP500
 MDLZ,Kraft Foods,SP500
 MDT,Medtronic Inc.,SP500
 MET,MetLife Inc.,SP500
-MHP,McGraw-Hill,SP500
-MHS,Medco Health Solutions Inc.,SP500
 MJN,Mead Johnson,SP500
 MKC,McCormick & Co.,SP500
 MMC,Marsh & McLennan,SP500
@@ -397,7 +399,6 @@ MSI,Motorola Solutions Inc.,SP500
 MTB,M&T Bank Corp.,SP500
 MU,Micron Technology,SP500
 MUR,Murphy Oil,SP500
-MWV,MeadWestvaco Corporation,SP500
 MWW,Monster Worldwide,SP500
 MYL,Mylan Inc.,SP500
 NBL,Noble Energy Inc,SP500
@@ -416,13 +417,11 @@ NRG,NRG Energy,SP500
 NSC,Norfolk Southern Corp.,SP500
 NTAP,NetApp,SP500
 NTRS,Northern Trust Corp.,SP500
-NU,Northeast Utilities,SP500
 NUE,Nucor Corp.,SP500
 NVDA,Nvidia Corporation,SP500
 NVLS,Novellus Systems,SP500
 NWL,Newell Rubbermaid Co.,SP500
 NWSA,News Corporation,SP500
-NYX,NYSE Euronext,SP500
 OI,Owens-Illinois Inc,SP500
 OKE,ONEOK,SP500
 OMC,Omnicom Group,SP500
@@ -450,7 +449,6 @@ PH,Parker-Hannifin,SP500
 PHM,Pulte Homes Inc.,SP500
 PKI,PerkinElmer,SP500
 PLD,ProLogis,SP500
-PLL,Pall Corp.,SP500
 PM,Philip Morris International,SP500
 PNC,PNC Financial Services,SP500
 PNW,Pinnacle West Capital,SP500
