Update technical analysis

--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -39,6 +39,7 @@ EPA:ILD,INT_ILIAD,INTRADAY
 EPA:IPH,INT_INNATE PHARMA,INTRADAY
 EPA:IPS,INT_IPSOS,INTRADAY
 EPA:JCQ,INT_JACQUET METAL,INTRADAY
+EPA:LAT,INT_LATECOERE,INTRADAY
 EPA:LOCAL,INT_SOLOCAL,INTRADAY
 EPA:LVC,INT_LYXOR LEV CAC 40,INTRADAY
 EPA:MBWS,INT_MARIE BRIZARD,INTRADAY
