--- a/GoogleDownload.user.cfg
+++ b/GoogleDownload.user.cfg
@@ -1,3 +1,5 @@
 # Personal Google download config file
+INDEXCBOE:RVX,RUSSELL VOLATILITY INDEX,INDICATOR
+INDEXCBOE:SKEW,SKEW,INDICATOR
 LON:GKP,Gulf Keystone Petroleum Limited,FTSE100
 NOK,Nokia Corporation (ADR),USER1
