Delete BAK files

--- a/GoogleDownload.cfg
+++ b/GoogleDownload.cfg
@@ -31,104 +31,104 @@ ETR:SIE,SIEMENS,DAX30
 ETR:TKA,THYSSENKRUPP,DAX30
 ETR:VOW3,VOLKSWAGEN,DAX30
 ########################################        FTSE100     ###################################
-LON:AAL,ANGLO AMERICAN,FTSE100
-LON:ABF,ASSOCIAT BRIT FOODS,FTSE100
-LON:ADM,ADMIRAL GROUP,FTSE100
-LON:AGK,AGGREKO,FTSE100
-LON:AMEC,AMEC,FTSE100
-LON:ANTO,ANTOFAGASTA,FTSE100
-LON:ARM,ARM HOLDINGS,FTSE100
-LON:ASHM,ASHMORE GRP,FTSE100
-LON:AV,AVIVA,FTSE100
-LON:AZN,ASTRAZENECA,FTSE100
-LON:BA,BAE SYSTEMS,FTSE100
-LON:BARC,BARCLAYS,FTSE100
-LON:BATS,BRIT AMER TOBACCO,FTSE100
-LON:BG,BG GROUP,FTSE100
-LON:BLND,BRIT LAND CO REIT,FTSE100
-LON:BLT,BHP BILLITON,FTSE100
-LON:BNZL,BUNZL,FTSE100
-LON:BP,BP,FTSE100
-LON:BRBY,BURBERRY GROUP,FTSE100
-LON:BSY,B SKY B GROUP,FTSE100
-LON:BT.A,BT GROUP,FTSE100
-LON:CCL,CARNIVAL,FTSE100
-LON:CNA,CENTRICA,FTSE100
-LON:CNE,CAIRN ENERGY,FTSE100
-LON:CPG,COMPASS GROUP,FTSE100
-LON:CPI,CAPITA GRP,FTSE100
-LON:CSCG,CAP SHOP CENTRES,FTSE100
-LON:DGE,DIAGEO,FTSE100
-LON:EMG,MAN GROUP,FTSE100
-LON:ENRC,EURASIAN NATURAL,FTSE100
-LON:ESSR,ESSAR ENERGY,FTSE100
-LON:EXPN,EXPERIAN,FTSE100
-LON:FRES,FRESNILLO,FTSE100
-LON:GFS,G4S,FTSE100
-LON:GKN,GKN,FTSE100
-LON:GLEN,GLENCORE INTL,FTSE100
-LON:GSK,GLAXOSMITHKLINE,FTSE100
-LON:HL,HARGREAVES LANS,FTSE100
-LON:HMSO,HAMMERSON REIT,FTSE100
-LON:HSBA,HSBC HLDG,FTSE100
-LON:IAG,INTL. CONS. AIR GRP,FTSE100
-LON:IAP,ICAP,FTSE100
-LON:IHG,INTERCONT HOTELS,FTSE100
-LON:IMI,IMI PLC,FTSE100
-LON:IMT,IMPERIAL TOBACCO,FTSE100
-LON:INVP,INVESTEC,FTSE100
-LON:IPR,INTERNATIONAL POWER,FTSE100
-LON:ISAT,INMARSAT,FTSE100
-LON:ITRK,INTERTEK GROUP,FTSE100
-LON:ITV,ITV,FTSE100
-LON:JMAT,JOHNSON MATTHEY PLC,FTSE100
-LON:KAZ,KAZAKHMYS,FTSE100
-LON:KGF,KINGFISHER,FTSE100
-LON:LAND,LAND SEC R.E.I.T.,FTSE100
-LON:LGEN,LEGAL & GENERAL,FTSE100
-LON:LLOY,LLOYDS BANKING GRP,FTSE100
-LON:LMI,LONMIN,FTSE100
-LON:MGGT,MEGGITT,FTSE100
-LON:MKS,MARKS & SPENCER,FTSE100
-LON:MRW,MORRISON SUPERMKTS,FTSE100
-LON:NG,NATIONAL GRID,FTSE100
-LON:NXT,NEXT,FTSE100
-LON:OML,OLD MUTUAL,FTSE100
-LON:PFC,PETROFAC,FTSE100
-LON:PRU,PRUDENTIAL,FTSE100
-LON:PSON,PEARSON,FTSE100
-LON:RB,RECKITT BENCK GRP,FTSE100
-LON:RBS,ROYAL BK SCOTL GR,FTSE100
-LON:REL,REED ELSEVIER PLC,FTSE100
-LON:REX,REXAM,FTSE100
-LON:RIO,RIO TINTO,FTSE100
-LON:RR,ROLLS-ROYCE HLDGS,FTSE100
-LON:RRS,RANDGOLD RESOURCES,FTSE100
-LON:RSA,RSA INSUR GRP,FTSE100
-LON:RSL,RESOLUTION NPV,FTSE100
-LON:SAB,SABMILLER,FTSE100
-LON:SBRY,SAINSBURY,FTSE100
-LON:SDR,SCHRODERS,FTSE100
-LON:SDRC,SCHRODERS NVTG,FTSE100
-LON:SGE,SAGE GRP,FTSE100
-LON:SHP,SHIRE,FTSE100
-LON:SL,STANDARD LIFE,FTSE100
-LON:SMIN,SMITHS GROUP,FTSE100
-LON:SN,SMITH & NEPHEW,FTSE100
-LON:SRP,SERCO GROUP,FTSE100
-LON:SSE,SSE,FTSE100
-LON:STAN,STANDARD CHARTERED,FTSE100
-LON:SVT,SEVERN TRENT,FTSE100
-LON:TATE,TATE & LYLE,FTSE100
-LON:TLW,TULLOW OIL,FTSE100
-LON:TSCO,TESCO PLC,FTSE100
-LON:ULVR,UNILEVER,FTSE100
-LON:UU,UNITED UTILITIES GR,FTSE100
-LON:VED,VEDANTA RESOURCES,FTSE100
-LON:VOD,VODAFONE GRP,FTSE100
-LON:WEIR,WEIR GROUP,FTSE100
-LON:WOS,WOLSELEY,FTSE100
-LON:WPP,WPP,FTSE100
-LON:WTB,WHITBREAD,FTSE100
-LON:XTA,XSTRATA,FTSE100
-############################## COMMODITIES ##################################
+#LON:AAL,ANGLO AMERICAN,FTSE100
+#LON:ABF,ASSOCIAT BRIT FOODS,FTSE100
+#LON:ADM,ADMIRAL GROUP,FTSE100
+#LON:AGK,AGGREKO,FTSE100
+#LON:AMEC,AMEC,FTSE100
+#LON:ANTO,ANTOFAGASTA,FTSE100
+#LON:ARM,ARM HOLDINGS,FTSE100
+#LON:ASHM,ASHMORE GRP,FTSE100
+#LON:AV,AVIVA,FTSE100
+#LON:AZN,ASTRAZENECA,FTSE100
+#LON:BA,BAE SYSTEMS,FTSE100
+#LON:BARC,BARCLAYS,FTSE100
+#LON:BATS,BRIT AMER TOBACCO,FTSE100
+#LON:BG,BG GROUP,FTSE100
+#LON:BLND,BRIT LAND CO REIT,FTSE100
+#LON:BLT,BHP BILLITON,FTSE100
+#LON:BNZL,BUNZL,FTSE100
+#LON:BP,BP,FTSE100
+#LON:BRBY,BURBERRY GROUP,FTSE100
+#LON:BSY,B SKY B GROUP,FTSE100
+#LON:BT.A,BT GROUP,FTSE100
+#LON:CCL,CARNIVAL,FTSE100
+#LON:CNA,CENTRICA,FTSE100
+#LON:CNE,CAIRN ENERGY,FTSE100
+#LON:CPG,COMPASS GROUP,FTSE100
+#LON:CPI,CAPITA GRP,FTSE100
+#LON:CSCG,CAP SHOP CENTRES,FTSE100
+#LON:DGE,DIAGEO,FTSE100
+#LON:EMG,MAN GROUP,FTSE100
+#LON:ENRC,EURASIAN NATURAL,FTSE100
+#LON:ESSR,ESSAR ENERGY,FTSE100
+#LON:EXPN,EXPERIAN,FTSE100
+#LON:FRES,FRESNILLO,FTSE100
+#LON:GFS,G4S,FTSE100
+#LON:GKN,GKN,FTSE100
+#LON:GLEN,GLENCORE INTL,FTSE100
+#LON:GSK,GLAXOSMITHKLINE,FTSE100
+#LON:HL,HARGREAVES LANS,FTSE100
+#LON:HMSO,HAMMERSON REIT,FTSE100
+#LON:HSBA,HSBC HLDG,FTSE100
+#LON:IAG,INTL. CONS. AIR GRP,FTSE100
+#LON:IAP,ICAP,FTSE100
+#LON:IHG,INTERCONT HOTELS,FTSE100
+#LON:IMI,IMI PLC,FTSE100
+#LON:IMT,IMPERIAL TOBACCO,FTSE100
+#LON:INVP,INVESTEC,FTSE100
+#LON:IPR,INTERNATIONAL POWER,FTSE100
+#LON:ISAT,INMARSAT,FTSE100
+#LON:ITRK,INTERTEK GROUP,FTSE100
+#LON:ITV,ITV,FTSE100
+#LON:JMAT,JOHNSON MATTHEY PLC,FTSE100
+#LON:KAZ,KAZAKHMYS,FTSE100
+#LON:KGF,KINGFISHER,FTSE100
+#LON:LAND,LAND SEC R.E.I.T.,FTSE100
+#LON:LGEN,LEGAL & GENERAL,FTSE100
+#LON:LLOY,LLOYDS BANKING GRP,FTSE100
+#LON:LMI,LONMIN,FTSE100
+#LON:MGGT,MEGGITT,FTSE100
+#LON:MKS,MARKS & SPENCER,FTSE100
+#LON:MRW,MORRISON SUPERMKTS,FTSE100
+#LON:NG,NATIONAL GRID,FTSE100
+#LON:NXT,NEXT,FTSE100
+#LON:OML,OLD MUTUAL,FTSE100
+#LON:PFC,PETROFAC,FTSE100
+#LON:PRU,PRUDENTIAL,FTSE100
+#LON:PSON,PEARSON,FTSE100
+#LON:RB,RECKITT BENCK GRP,FTSE100
+#LON:RBS,ROYAL BK SCOTL GR,FTSE100
+#LON:REL,REED ELSEVIER PLC,FTSE100
+#LON:REX,REXAM,FTSE100
+#LON:RIO,RIO TINTO,FTSE100
+#LON:RR,ROLLS-ROYCE HLDGS,FTSE100
+#LON:RRS,RANDGOLD RESOURCES,FTSE100
+#LON:RSA,RSA INSUR GRP,FTSE100
+#LON:RSL,RESOLUTION NPV,FTSE100
+#LON:SAB,SABMILLER,FTSE100
+#LON:SBRY,SAINSBURY,FTSE100
+#LON:SDR,SCHRODERS,FTSE100
+#LON:SDRC,SCHRODERS NVTG,FTSE100
+#LON:SGE,SAGE GRP,FTSE100
+#LON:SHP,SHIRE,FTSE100
+#LON:SL,STANDARD LIFE,FTSE100
+#LON:SMIN,SMITHS GROUP,FTSE100
+#LON:SN,SMITH & NEPHEW,FTSE100
+#LON:SRP,SERCO GROUP,FTSE100
+#LON:SSE,SSE,FTSE100
+#LON:STAN,STANDARD CHARTERED,FTSE100
+#LON:SVT,SEVERN TRENT,FTSE100
+#LON:TATE,TATE & LYLE,FTSE100
+#LON:TLW,TULLOW OIL,FTSE100
+#LON:TSCO,TESCO PLC,FTSE100
+#LON:ULVR,UNILEVER,FTSE100
+#LON:UU,UNITED UTILITIES GR,FTSE100
+#LON:VED,VEDANTA RESOURCES,FTSE100
+#LON:VOD,VODAFONE GRP,FTSE100
+#LON:WEIR,WEIR GROUP,FTSE100
+#LON:WOS,WOLSELEY,FTSE100
+#LON:WPP,WPP,FTSE100
+#LON:WTB,WHITBREAD,FTSE100
+#LON:XTA,XSTRATA,FTSE100
+############################### COMMODITIES ##################################
