--- a/COT2.cfg
+++ b/COT2.cfg
@@ -18,7 +18,7 @@ SUGAR NO. 11_COT;
 COFFEE C_COT;
 SILVER_COT;
 COPPER-GRADE #1_COT;
-GOLD_COT;
+GOLD_COT;Or (once en $)
 CANADIAN DOLLAR_COT;
 SWISS FRANC_COT;
 JAPANESE YEN_COT;
@@ -29,7 +29,7 @@ U.S. TREASURY BONDS_COT;
 10-YEAR U.S. TREASURY NOTES_COT;
 5-YEAR U.S. TREASURY NOTES_COT;
 3-MONTH EURODOLLARS_COT;
-S&P 500 STOCK INDEX_COT;
+S&P 500 STOCK INDEX_COT;SP500
 MEXICAN PESO_COT;
 LEAN HOGS_COT;
 NASDAQ-100 STOCK INDEX_COT;
