--- a/COT2.cfg
+++ b/COT2.cfg
@@ -1,29 +1,29 @@
 WHEAT_COT;
-CORN_COT;
+CORN_COT;CORN
 OATS_COT;
 SOYBEANS_COT;
 SOYBEAN OIL_COT;
 NO. 2 HEATING OIL, N.Y. HARBOR_COT;
-NATURAL GAS_COT;
+NATURAL GAS_COT;NATURAL GAS
 SOYBEAN MEAL_COT;
-COTTON NO. 2_COT;
+COTTON NO. 2_COT;COTON
 ROUGH RICE_COT;
-LIVE CATTLE_COT;
-RANDOM LENGTH LUMBER_COT;
-FEEDER CATTLE_COT;
-COCOA_COT;
-PALLADIUM_COT;
-PLATINUM_COT;
-SUGAR NO. 11_COT;
-COFFEE C_COT;
-SILVER_COT;
-COPPER-GRADE #1_COT;
-GOLD_COT;Or (once en $)
-CANADIAN DOLLAR_COT;
-SWISS FRANC_COT;
-JAPANESE YEN_COT;
-U.S. DOLLAR INDEX_COT;
-NIKKEI STOCK AVERAGE_COT;
+LIVE CATTLE_COT;LIVE STOCK
+RANDOM LENGTH LUMBER_COT;WOOD
+FEEDER CATTLE_COT;LIVE STOCK
+COCOA_COT;COCOA
+PALLADIUM_COT;PALLADIUM
+PLATINUM_COT;PLATINUM
+SUGAR NO. 11_COT;SUGAR
+COFFEE C_COT;COFFEE
+SILVER_COT;SILVER
+COPPER-GRADE #1_COT;COPPER
+GOLD_COT;GOLD
+CANADIAN DOLLAR_COT;CANADIAN DOLLAR
+SWISS FRANC_COT;SWISS FRANC INDEX
+JAPANESE YEN_COT;JAPANESE YEN
+U.S. DOLLAR INDEX_COT;US DOLLAR INDEX
+NIKKEI STOCK AVERAGE_COT;NIKKEI 225
 U.S. TREASURY BONDS_COT;
 2-YEAR U.S. TREASURY NOTES_COT;
 10-YEAR U.S. TREASURY NOTES_COT;
@@ -32,18 +32,18 @@ U.S. TREASURY BONDS_COT;
 S&P 500 STOCK INDEX_COT;SP500
 MEXICAN PESO_COT;
 LEAN HOGS_COT;
-NASDAQ-100 STOCK INDEX_COT;
+NASDAQ-100 STOCK INDEX_COT;NASDAQ
 DOW JONES INDUSTRIAL AVERAGE_COT;
 RUSSIAN RUBLE_COT;
-EURO FX_COT;
-CRUDE OIL, LIGHT SWEET_COT;
+EURO FX_COT;EURO INDEX
+CRUDE OIL, LIGHT SWEET_COT;OIL-WTI
 DOW JONES INDUSTRIAL AVG- x $5_COT;
 BRITISH POUND STERLING_COT;
 NEW ZEALAND DOLLAR_COT;
-VIX FUTURES_COT;
+VIX FUTURES_COT;VIX
 AUSTRALIAN DOLLAR_COT;
 WTI CRUDE OIL FINANCIAL_COT;
 GASOLINE BLENDSTOCK (RBOB)_COT;
 BRENT FINANCIAL_COT;
-LONG-TERM U.S. TREASURY BONDS_COT;
-DJIA Consolidated_COT;
+LONG-TERM U.S. TREASURY BONDS_COT;T-NOTE 30-YEAR RATE
+DJIA Consolidated_COT;DOW JONES
