--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -14,6 +14,7 @@ EPA:ALO,INT_ALSTOM,INTRADAY
 EPA:ALT,INT_ALTRAN,INTRADAY
 EPA:ALTER,INT_THERADIAG,INTRADAY
 EPA:ALU,INT_ALCATEL,INTRADAY
+EPA:ALVER,INT_VERGNET SA,INTRADAY
 EPA:AREVA,INT_AREVA,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
