Update PEA portfolio

--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -16,6 +16,7 @@ EPA:ALTER,INT_THERADIAG,INTRADAY
 EPA:ALU,INT_ALCATEL,INTRADAY
 EPA:ALVER,INT_VERGNET SA,INTRADAY
 EPA:AREVA,INT_AREVA,INTRADAY
+EPA:AWOX,INT_AWOX,INTRADAY
 EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
 EPA:CA,INT_CARREFOUR,INTRADAY
