--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -8,6 +8,7 @@ EPA:ABCA,INT_ABC ARBITRAGE,INTRADAY
 EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
 EPA:AF,INT_AIR FRANCE - KLM,INTRADAY
+EPA:AI,INT_AIR LIQUIDE SA,INTRADAY
 EPA:ALGEN,INT_GENOWAY,INTRADAY
 EPA:ALMED,INT_MEDICREA,INTRADAY
 EPA:ALO,INT_ALSTOM,INTRADAY
