Update Report Cfg

--- a/Report.cfg
+++ b/Report.cfg
@@ -1,6 +1,6 @@
 #Title;Indices
 CAC40;MyIndicators;Daily;200
-CAC40;MyIndicators;HLBreak;200
+CAC40;MyIndicators;TLB;200
 CAC40;MyIndicators;Bar_3;200
 CAC40;TrendLine;Daily;200
 SP500;MyIndicators;Daily;300
@@ -31,17 +31,17 @@ JAPANESE YEN;TrailSR_Light;Daily;300
 #JAPANESE YEN_COT;COT;Weekly;150
 #Title;SBF20 Stocks
 AIR FRANCE-KLM;TrailSR_Light;Daily;200
-AIR FRANCE-KLM;TrailSR_Light;TwoLineBreaks;200
+AIR FRANCE-KLM;TrailSR_Light;TLB;200
 SOITEC SILICON;TrailSR_Light;Daily;200
-SOITEC SILICON;TrailSR_Light;TwoLineBreaks;200
+SOITEC SILICON;TrailSR_Light;TLB;200
 PEUGEOT;TrailSR_Light;Daily;200
-PEUGEOT;TrailSR_Light;TwoLineBreaks;200
+PEUGEOT;TrailSR_Light;TLB;200
 #Title;Ratio
-SILVER/GOLD;TrailSR_Light;TwoLineBreaks;200
-SP500/GOLD;TrailSR_Light;TwoLineBreaks;200
-CAC40/SP500;TrailSR_Light;TwoLineBreaks;200
-TRANSPORT SECTOR/SP500;TrailSR_Light;TwoLineBreaks;200
-20+ Years T-Bonds/SP500;TrailSR_Light;TwoLineBreaks;200
-SP500/HIGH YIELD BOND;TrailSR_Light;TwoLineBreaks;200
-HIGH YIELD BOND/INVEST GRADE BOND;TrailSR_Light;TwoLineBreaks;200
-WTI OIL;HeikinAshi;TwoLineBreaks_3D;247
+SILVER/GOLD;TrailSR_Light;TLB;200
+SP500/GOLD;TrailSR_Light;TLB;200
+CAC40/SP500;TrailSR_Light;TLB;200
+TRANSPORT SECTOR/SP500;TrailSR_Light;TLB;200
+20+ Years T-Bonds/SP500;TrailSR_Light;TLB;200
+SP500/HIGH YIELD BOND;TrailSR_Light;TLB;200
+HIGH YIELD BOND/INVEST GRADE BOND;TrailSR_Light;TLB;200
+WTI OIL;HeikinAshi;TLB_3D;247
