--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -1,9 +1,10 @@
 # Personal Yahoo download config file
-^OEX,SP100,INDICES
 ^NYA,SP_ALL,INDICES
+^OEX,SP100,INDICES
+^OVX,Crude Oil Volatility Index,INDICATOR
 ^XII,INSTITUTIONAL INDEX,INDICES
-ALMED.PA,MEDICREA,CAC_ALL
 ALCAR.PA,CARMAT,CAC_ALL
+ALMED.PA,MEDICREA,CAC_ALL
 BUND,PIMCO Germany Bonds,BOND
 BUNL,German BUND ETF,BOND
 BUNT,German Bunds 3X,BOND
