--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -45,6 +45,7 @@ EPA:JCQ,INT_JACQUET METAL,INTRADAY
 EPA:LAT,INT_LATECOERE,INTRADAY
 EPA:LOCAL,INT_SOLOCAL,INTRADAY
 EPA:LVC,INT_LYXOR LEV CAC 40,INTRADAY
+EPA:MAU,INT_MAUREL ET PROM,INTRADAY
 EPA:MBWS,INT_MARIE BRIZARD,INTRADAY
 EPA:MC,INT_LVMH,INTRADAY
 EPA:MGIC,INT_MGI COUTIER,INTRADAY
