--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -70,6 +70,7 @@ EPA:VET,INT_VET AFFAIRES,INTRADAY
 EPA:VIE,INT_VEOLIA ENVIRONN.,INTRADAY
 EPA:VIL,INT_VIEL,INTRADAY
 EPA:VK,INT_VALLOUREC,INTRADAY
+EPA:ZC,INT_ZODIAC AEROSPACE,INTRADAY
 FB,INT_US_FACEBOOK,INTRADAY
 FRA:VOW,INT_VOLKSWAGEN,INTRADAY
 FXE,INT_FX_EUR,INTRADAY
