--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -1,5 +1,6 @@
 ISIN;NOM;SICOVAM;TICKER;GROUP     =>   BE0003470755;SOLVAY;;SOLB;CAC40
 FR0003500008;CAC40;;CAC40;INDICES
+QS0011131826 ;CAC40NR;;CAC40NR;INDICES
 FR0003999481;SBF120;;SBF120;INDICES
 EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 FR0010411884;BX4;;BX4;FUND
