--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -8,6 +8,7 @@ ALMED.PA,MEDICREA,CAC_ALL
 BUND,PIMCO Germany Bonds,BOND
 BUNL,German BUND ETF,BOND
 BUNT,German Bunds 3X,BOND
+DBXB.F,EURO BOND 7-10,BOND
 DRYS,DryShips Inc.,USER1
 EGPT,EGYPT ETF,INDICES
 FB,Facebook,SP500
