--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -21,6 +21,7 @@ EPA:BNP,INT_BNP PARIBAS,INTRADAY
 EPA:BX4,INT_LYXOR BX4,INTRADAY
 EPA:CA,INT_CARREFOUR,INTRADAY
 EPA:CGG,INT_CGG,INTRADAY
+EPA:CO,INT_CASINO,INTRADAY
 EPA:COX,INT_NICOX,INTRADAY
 EPA:CS,INT_AXA,INTRADAY
 EPA:DBG,INT_DERICHEBOURG,INTRADAY
