--- a/Report.cfg
+++ b/Report.cfg
@@ -45,3 +45,4 @@ TRANSPORT SECTOR/SP500;TrailSR_Light;TLB;200
 SP500/HIGH YIELD BOND;TrailSR_Light;TLB;200
 HIGH YIELD BOND/INVEST GRADE BOND;TrailSR_Light;TLB;200
 WTI OIL;HeikinAshi;TLB_3D;247
+INT_CASINO;HeikinAshiSAR_NEW;TLB_6D;466
