--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,2 +1,4 @@
 ISIN,MARKET,NAME
-DE000CR5T882,CBFR, TURBO CAC40 LONG
+DE000CR2UB48,CBFR,TURBO BEST CAC40 CALL 3808
+DE000CN83UT8,CBFR,TURBO BEST CRUDE CALL 19
+DE000CD07RP2,CBFR,TURBO BEST EUROBUND PUT 180
