--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,4 +1,8 @@
 ISIN,MARKET,NAME
 DE000CR2UB48,CBFR,TURBO BEST CAC40 CALL 3808
+DE000CN82UM5,CBFR,TURBO BEST CAC40 PUT 4800
 DE000CN83UT8,CBFR,TURBO BEST CRUDE CALL 19
 DE000CD07RP2,CBFR,TURBO BEST EUROBUND PUT 180
+DE000CR5TNW2,CBFR,TURBO CALL COPPER CALL 1.91
+DE000CR5U4N0,CBFR,TURBO CALL EURUSD
+DE000CN1H7D4,CBFR,TURBO PUT EURUSD
