--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -25,6 +25,7 @@ EPA:CO,INT_CASINO,INTRADAY
 EPA:COX,INT_NICOX,INTRADAY
 EPA:CS,INT_AXA,INTRADAY
 EPA:DBG,INT_DERICHEBOURG,INTRADAY
+EPA:DG,INT_VINCI,INTRADAY
 EPA:DSY,INT_DASSAULT SYSTEMES,INTRADAY
 EPA:EC,INT_TOTAL GABON,INTRADAY
 EPA:ECP,INT_EUROPACORP,INTRADAY
