--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -3,10 +3,12 @@ DE000CR2UB48,CBFR,TURBO BEST CAC40 CALL 3808
 DE000CN82UM5,CBFR,TURBO BEST CAC40 PUT 4800
 DE000CN83UT8,CBFR,TURBO BEST CRUDE CALL 19
 DE000CD07RP2,CBFR,TURBO BEST EUROBUND PUT 180
-DE000CR5TNW2,CBFR,TURBO CALL COPPER CALL 1.91
-DE000CR5U4N0,CBFR,TURBO CALL EURUSD
-DE000CN1H7D4,CBFR,TURBO PUT EURUSD
+DE000CR5TNW2,CBFR,TURBO COPPER CALL 1.91
+DE000CR5U4N0,CBFR,TURBO EURUSD CALL 
+DE000CN1H7D4,CBFR,TURBO EURUSD PUT 
 DE000CZ5MTB8,CBFR,TURBO BEST GOLD PUT 1385
 DE000CD094C3,CBFR,TURBO BEST GOLD CALL 1059
 DE000CR2V2K2,CBFR,TURBO BEST SILVER PUT 18.58
 DE000CN1HHP6,CBFR,TURBO BEST SILVER CALL 12.11
+DE000CN50GA6,CBFR,TURBO McDonalds PUT 142
+DE000CN4ZZF5,CBFR,TURBO McDonalds CALL 97
