--- a/YahooDownload.cfg
+++ b/YahooDownload.cfg
@@ -36,6 +36,7 @@ EEM,Emerging,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/
 FXI,China,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_fxi.csv
 RSX,Russia,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_rsx.csv
 PIN,India,COUNTRY,http://www.sentimentrader.com/subscriber/icharts/indicator/country_pin.csv
+ARGT,Argentina,COUNTRY
 ########################################       Commodities      ################################
 GSG,ISHARES GSCI COMMODITY,COMMODITY
 GLD,GOLD,COMMODITY,http://www.sentimentrader.com/subscriber/icharts/indicator/etf_gld.csv
