--- a/BarChartDownload.cfg
+++ b/BarChartDownload.cfg
@@ -1,6 +1,8 @@
 # Personal Google download config file
 $TRIN,TRIN,INDICATOR
 $TRIN_LOG,TRIN_LOG,INDICATOR
+$TRIN_SUM,TRIN_SUM,INDICATOR
+$TRIN_LOG_SUM,TRIN_LOG_SUM,INDICATOR
 $ADDT,Total Advance Decline Difference,INDICATOR
 $ADRT,Total Advance Decline Ratio,INDICATOR
 $AVRT,Total Advance Decline Volume Ratio,INDICATOR
