--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -9,6 +9,7 @@ EPA:AC,INT_ACCOR,INTRADAY
 EPA:ACA,INT_CREDIT AGRICOLE,INTRADAY
 EPA:AF,INT_AIR FRANCE - KLM,INTRADAY
 EPA:AI,INT_AIR LIQUIDE SA,INTRADAY
+EPA:ALCAR,INT_CARMAT,INTRADAY
 EPA:ALGEN,INT_GENOWAY,INTRADAY
 EPA:ALMED,INT_MEDICREA,INTRADAY
 EPA:ALO,INT_ALSTOM,INTRADAY
