--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -12,3 +12,5 @@ DE000CR2V2K2,CBFR,TURBO BEST SILVER PUT 18.58
 DE000CN1HHP6,CBFR,TURBO BEST SILVER CALL 12.11
 DE000CN50GA6,CBFR,TURBO McDonalds PUT 142
 DE000CN4ZZF5,CBFR,TURBO McDonalds CALL 97
+DE000CN4Y8A4,CBFR,TURBO COFFEE CALL 0.94
+DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
