--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -40,6 +40,7 @@ EPA:GNFT,INT_GENFIT,INTRADAY
 EPA:GOE,INT_GROUPE GORGE,INTRADAY
 EPA:HIM,INT_HI-MEDIA,INTRADAY
 EPA:ILD,INT_ILIAD,INTRADAY
+EPA:ING,INT_INGENICO,INTRADAY
 EPA:IPH,INT_INNATE PHARMA,INTRADAY
 EPA:IPS,INT_IPSOS,INTRADAY
 EPA:JCQ,INT_JACQUET METAL,INTRADAY
