Update future symbol.

--- a/YahooIntradayDownload.user.cfg
+++ b/YahooIntradayDownload.user.cfg
@@ -1,19 +1,29 @@
 # Personal Yahoo download config file
 ^VIX,INT_VOLATILITY S&P 500,INTRADAY
-CLH16.NYM,INT_FUT_CRUDE_MARCH16,INTRADAY
-ESH16.CME,INT_FUT_EMINI_MARCH16,INTRADAY
+HGJ16.CMX,INT_FUT_COPPER_APR_16,INTRADAY
+GCJ16.CMX,INT_FUT_GOLD_APRIL16,INTRADAY
+# M16     -     JUNE16
+CLM16.NYM,INT_FUT_CRUDE_JUNE16,INTRADAY
+ESM16.CME,INT_FUT_EMINI_JUNE16,INTRADAY
+NGM16.NYM,INT_FUT_NATURAL_GAS_JUNE16,INTRADAY
+SBM16.NYB,INT_FUT_SUGAR_JUNE16,INTRADAY
+SIM16.CMX,INT_FUT_SILVER_JUNE16,INTRADAY
+TYM16.CBT,INT_FUT_TBOND_JUNE16,INTRADAY
+FGBLM6.EX,INT_FUT_EUROBUND_JUNE16,INTRADAY
+# MU16     -     SEP16
+NGU16.NYM,INT_FUT_NATURAL_GAS_SEP16,INTRADAY
+SBU16.NYB,INT_FUT_SUGAR_SEP16,INTRADAY
+SIU16.CMX,INT_FUT_SILVER_SEP16,INTRADAY
+CLU16.NYM,INT_FUT_CRUDE_SEP16,INTRADAY
+ESU16.CME,INT_FUT_EMINI_SEP16,INTRADAY
+TYU16.CBT,INT_FUT_TBOND_SEP16,INTRADAY
+FGBLU6.EX,INT_FUT_EUROBUND_SEP16,INTRADAY
+# Non FUture
 EURGBP=X,INT_FX_EUR_GBP,INTRADAY
 EURJPY=X,INT_FX_EUR_JPY,INTRADAY
 EURTRY=X,INT_FX_EUR_TRY,INTRADAY
 EURUSD=X,INT_FX_EUR_USD,INTRADAY
-FGBLH6.EX,INT_FUT_EUROBUND_MARCH16,INTRADAY
 GBPUSD=X,INT_FX_GBP_USD,INTRADAY
-GCJ16.CMX,INT_FUT_GOLD_APRIL16,INTRADAY
-GD.AT,INT_IND_ATHEN INDEX,INTRADAY
-HGJ16.CMX,INT_FUT_COPPER_APR_16,INTRADAY
-NGH16.NYM,INT_FUT_NATURAL_GAS_MARCH16,INTRADAY
-SBH16.NYB,INT_FUT_SUGAR_MARCH16,INTRADAY
-SIH16.CMX,INT_FUT_SILVER_MARCH16,INTRADAY
-TYH16.CBT,INT_FUT_TBOND_MARCH16,INTRADAY
 USDCAD=X,INT_FX_USD_CAD,INTRADAY
+GD.AT,INT_IND_ATHEN INDEX,INTRADAY
 V2TX.DE,INT_VSTOXX ,INTRADAY
