Add VERGNET download

--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -3,6 +3,7 @@
 ^OEX,SP100,INDICES
 ^OVX,Crude Oil Volatility Index,INDICATOR
 ^XII,INSTITUTIONAL INDEX,INDICES
+ALVER.PA,VERGNET,EURONEXT
 BUND,PIMCO Germany Bonds,BOND
 BUNL,German BUND ETF,BOND
 DBXB.F,EURO BOND 7-10,BOND
