Removal All SP500 entries

--- a/YahooDownload.cfg
+++ b/YahooDownload.cfg
@@ -98,476 +98,5 @@ FXC,CANADIAN DOLLAR,CURRENCY
 ^VXN,VXN,INDICATOR
 ^VXV,VXV,INDICATOR
 XIV,XIV,INDICATOR
-########################################         SP500      ###################################
-A,Agilent Technologies Inc,SP500
-AA,Alcoa Inc,SP500
-AAPL,Apple Inc.,SP500
-ABC,AmerisourceBergen Corp,SP500
-ABT,Abbott Laboratories,SP500
-ACE,ACE Limited,SP500
-ACN,Accenture PLC,SP500
-ADBE,Adobe Systems Inc,SP500
-ADI,Analog Devices Inc,SP500
-ADM,Archer-Daniels-Midland Co,SP500
-ADP,Automatic Data Processing,SP500
-ADSK,Autodesk Inc,SP500
-AEE,Ameren Corp,SP500
-AEP,American Electric Power,SP500
-AES,AES Corp,SP500
-AET,Aetna Inc,SP500
-AFL,AFLAC Inc,SP500
-AGN,Allergan Inc,SP500
-AIG,American Intl Group Inc,SP500
-AIV,Apartment Investment & Mgmt,SP500
-AIZ,Assurant Inc,SP500
-AKAM,Akamai Technologies Inc,SP500
-AKS,AK Steel Hldg Corp,SP500
-ALL,Allstate Corp,SP500
-ALTR,Altera Corp,SP500
-AMAT,Applied Materials Inc,SP500
-AMD,Advanced Micro Devices,SP500
-AMGN,Amgen Inc,SP500
-AMP,Ameriprise Financial,SP500
-AMT,American Tower Corp A,SP500
-AMZN,Amazon.com Inc,SP500
-AN,AutoNation Inc,SP500
-ANF,Abercrombie & Fitch Company A,SP500
-AON,Aon Corporation,SP500
-APA,Apache Corporation,SP500
-APC,Anadarko Petroleum Corp,SP500
-APD,Air Products & Chemicals Inc,SP500
-APH,Amphenol Corp A,SP500
-APOL,Apollo Group Inc,SP500
-ARG,Airgas Inc,SP500
-ATI,Allegheny Technologies Inc,SP500
-AVB,AvalonBay Communities Inc.,SP500
-AVP,Avon Products,SP500
-AVY,Avery Dennison Corp,SP500
-AXP,American Express Co,SP500
-AZO,AutoZone Inc,SP500
-BA,Boeing Company,SP500
-BAC,Bank of America Corp,SP500
-BAX,Baxter International Inc.,SP500
-BBBY,Bed Bath & Beyond,SP500
-BBT,BB&T Corporation,SP500
-BBY,Best Buy Co. Inc.,SP500
-BCR,Bard (C.R.) Inc.,SP500
-BDX,Becton Dickinson,SP500
-BEN,Franklin Resources,SP500
-BF-B,Brown-Forman Corporation,SP500
-BHI,Baker Hughes Inc,SP500
-BIG,Big Lots Inc.,SP500
-BIIB,BIOGEN IDEC Inc.,SP500
-BK,The Bank of New York Mellon Corp.,SP500
-BLK,Blackrock,SP500
-BLL,Ball Corp,SP500
-BMC,BMC Software,SP500
-BMS,Bemis Company,SP500
-BMY,Bristol-Myers Squibb,SP500
-BRCM,Broadcom Corporation,SP500
-BRK-B,Berkshire Hathaway,SP500
-BSX,Boston Scientific,SP500
-BTU,Peabody Energy,SP500
-BXP,Boston Properties,SP500
-C,Citigroup Inc.,SP500
-CA,CA Inc.,SP500
-CAG,ConAgra Foods Inc.,SP500
-CAH,Cardinal Health Inc.,SP500
-CAM,Cameron International Corp.,SP500
-CAT,Caterpillar Inc.,SP500
-CB,Chubb Corp.,SP500
-CBG,CBRE,SP500
-CBS,CBS Corp.,SP500
-CCE,COCA-COLA ENTERPRIS,SP500
-CCL,Carnival Corp.,SP500
-CEG,Constellation Energy Group,SP500
-CELG,Celgene Corp.,SP500
-CERN,Cerner,SP500
-CF,CF Industries Holdings Inc,SP500
-CHK,Chesapeake Energy,SP500
-CHRW,C. H. Robinson Worldwide,SP500
-CI,CIGNA Corp.,SP500
-CINF,Cincinnati Financial,SP500
-CL,Colgate-Palmolive,SP500
-CLF,Cliffs Natural Resources,SP500
-CLX,Clorox Co.,SP500
-CMA,Comerica Inc.,SP500
-CMCSA,Comcast Corp.,SP500
-CME,CME Group Inc.,SP500
-CMG,Chipotle Mexican Grill,SP500
-CMI,Cummins Inc.,SP500
-CMS,CMS Energy,SP500
-CNP,CenterPoint Energy,SP500
-CNX,CONSOL Energy Inc.,SP500
-COF,Capital One Financial,SP500
-COG,Cabot Oil & Gas,SP500
-COH,Coach Inc.,SP500
-COL,Rockwell Collins,SP500
-COP,ConocoPhillips,SP500
-COST,Costco Co.,SP500
-CPB,Campbell Soup,SP500
-CRM,Salesforce.com,SP500
-CSC,Computer Sciences Corp.,SP500
-CSCO,Cisco Systems,SP500
-CSX,CSX Corp.,SP500
-CTAS,Cintas Corporation,SP500
-CTL,CenturyTel Inc,SP500
-CTSH,Cognizant Technology Solutions,SP500
-CTXS,Citrix Systems,SP500
-CVC,Cablevision Systems Corp.,SP500
-CVH,Coventry Health Care Inc.,SP500
-CVS,CVS Caremark Corp.,SP500
-CVX,Chevron Corp.,SP500
-D,Dominion Resources,SP500
-DAL,Delta Airlines,SP500
-DD,Du Pont (E.I.),SP500
-DE,Deere & Co.,SP500
-DF,Dean Foods,SP500
-DFS,Discover Financial Services,SP500
-DGX,Quest Diagnostics,SP500
-DHI,D. R. Horton,SP500
-DHR,Danaher Corp.,SP500
-DIS,Walt Disney Co.,SP500
-DISCA,Discovery Communications,SP500
-DNB,Dun & Bradstreet,SP500
-DNR,Denbury Resources Inc.,SP500
-DO,Diamond Offshore Drilling,SP500
-DOV,Dover Corp.,SP500
-DOW,Dow Chemical,SP500
-DPS,Dr Pepper Snapple Group,SP500
-DRI,Darden Restaurants,SP500
-DTE,DTE Energy Co.,SP500
-DUK,Duke Energy,SP500
-DV,DeVry Inc.,SP500
-DVA,DaVita Inc.,SP500
-DVN,Devon Energy Corp.,SP500
-EA,Electronic Arts,SP500
-EBAY,eBay Inc.,SP500
-ECL,Ecolab Inc.,SP500
-ED,Consolidated Edison,SP500
-EFX,Equifax Inc.,SP500
-EIX,Edison Int'l,SP500
-EL,Estee Lauder Cos.,SP500
-EMC,EMC Corp.,SP500
-EMN,Eastman Chemical,SP500
-EMR,Emerson Electric,SP500
-EOG,EOG Resources,SP500
-EQR,Equity Residential,SP500
-EQT,EQT Corporation,SP500
-ESRX,Express Scripts,SP500
-ETFC,E-Trade,SP500
-ETN,Eaton Corp.,SP500
-ETR,Entergy Corp.,SP500
-EW,Edwards Lifesciences,SP500
-EXC,Exelon Corp.,SP500
-EXPD,Expeditors Int'l,SP500
-EXPE,Expedia Inc.,SP500
-F,Ford Motor,SP500
-FAST,Fastenal Co,SP500
-FCX,Freeport-McMoran Cp & Gld,SP500
-FDX,FedEx Corporation,SP500
-FE,FirstEnergy Corp,SP500
-FFIV,F5 Networks,SP500
-FHN,First Horizon National,SP500
-FII,Federated Investors Inc.,SP500
-FIS,Fidelity National Information Services,SP500
-FISV,Fiserv Inc,SP500
-FITB,Fifth Third Bancorp,SP500
-FLIR,FLIR Systems,SP500
-FLR,Fluor Corp.,SP500
-FLS,Flowserve Corporation,SP500
-FMC,FMC Corporation,SP500
-FO,FORTUNE BRANDS INC,SP500
-FSLR,First Solar Inc,SP500
-FTI,FMC Technologies Inc.,SP500
-FTR,Frontier Communications,SP500
-GAS,AGL Resources Inc.,SP500
-GCI,Gannett Co.,SP500
-GD,General Dynamics,SP500
-GE,General Electric,SP500
-GILD,Gilead Sciences,SP500
-GIS,General Mills,SP500
-GLW,Corning Inc.,SP500
-GM,GENERAL MOTORS,SP500
-GME,GameStop Corp.,SP500
-GNW,Genworth Financial Inc.,SP500
-GOOG,Google Inc.,SP500
-GPC,Genuine Parts,SP500
-GPS,Gap (The),SP500
-GS,Goldman Sachs Group,SP500
-GT,Goodyear Tire & Rubber,SP500
-GWW,Grainger (W.W.) Inc.,SP500
-HAL,Halliburton Co.,SP500
-HAR,Harman Int'l Industries,SP500
-HAS,Hasbro Inc.,SP500
-HBAN,Huntington Bancshares,SP500
-HCN,Health Care REIT,SP500
-HCP,HCP Inc.,SP500
-HD,Home Depot,SP500
-HES,Hess Corporation,SP500
-HIG,Hartford Financial Svc.Gp.,SP500
-HOG,Harley-Davidson,SP500
-HON,Honeywell Int'l Inc.,SP500
-HOT,Starwood Hotels & Resorts,SP500
-HP,Helmerich & Payne,SP500
-HPQ,Hewlett-Packard,SP500
-HRB,Block H&R,SP500
-HRL,Hormel Foods Corp.,SP500
-HRS,Harris Corporation,SP500
-HST,Host Hotels & Resorts,SP500
-HSY,The Hershey Company,SP500
-HUM,Humana Inc.,SP500
-IBM,International Bus. Machines,SP500
-ICE,IntercontinentalExchange Inc.,SP500
-IFF,International FlavFrag,SP500
-IGT,International Game Technology,SP500
-INTC,Intel Corp.,SP500
-INTU,Intuit Inc.,SP500
-IP,International Paper,SP500
-IPG,Interpublic Group,SP500
-IR,Ingersoll-Rand PLC,SP500
-IRM,Iron Mountain Incorporated,SP500
-ISRG,Intuitive Surgical Inc.,SP500
-ITT,ITT CORPORATION,SP500
-ITW,Illinois Tool Works,SP500
-IVZ,Invesco Ltd.,SP500
-JBL,Jabil Circuit,SP500
-JCI,Johnson Controls,SP500
-JCP,Penney (J.C.),SP500
-JEC,Jacobs Engineering Group,SP500
-JNJ,Johnson & Johnson,SP500
-JNPR,Juniper Networks,SP500
-JNS,JANUS CAPITAL GROUP,SP500
-JOY,Joy Global Inc.,SP500
-JPM,JPMorgan Chase & Co.,SP500
-JWN,Nordstrom,SP500
-K,Kellogg Co.,SP500
-KEY,KeyCorp,SP500
-KIM,Kimco Realty,SP500
-KLAC,KLA-Tencor Corp.,SP500
-KMB,Kimberly-Clark,SP500
-KMX,Carmax Inc,SP500
-KO,Coca Cola Co.,SP500
-KR,Kroger Co.,SP500
-KSS,Kohl's Corp.,SP500
-L,Loews Corp.,SP500
-LEG,Leggett & Platt,SP500
-LEN,Lennar Corp.,SP500
-LH,Laboratory Corp. of America Holding,SP500
-LIFE,Life Technologies,SP500
-LLL,L-3 Communications Holdings,SP500
-LLTC,Linear Technology Corp.,SP500
-LLY,Lilly (Eli) & Co.,SP500
-LM,Legg Mason,SP500
-LMT,Lockheed Martin Corp.,SP500
-LNC,Lincoln National,SP500
-LOW,Lowe's Cos.,SP500
-LSI,LSI Corporation,SP500
-LTD,Limited Brands Inc.,SP500
-LUK,Leucadia National Corp.,SP500
-LUV,Southwest Airlines,SP500
-LXK,Lexmark Int'l Inc,SP500
-M,Macy's Inc.,SP500
-MA,Mastercard Inc.,SP500
-MAR,Marriott Int'l.,SP500
-MAS,Masco Corp.,SP500
-MAT,Mattel Inc.,SP500
-MCD,McDonald's Corp.,SP500
-MCHP,Microchip Technology,SP500
-MCK,McKesson Corp.,SP500
-MCO,Moody's Corp,SP500
-MDLZ,Kraft Foods,SP500
-MDT,Medtronic Inc.,SP500
-MET,MetLife Inc.,SP500
-MJN,Mead Johnson,SP500
-MKC,McCormick & Co.,SP500
-MMC,Marsh & McLennan,SP500
-MMI,Motorola Mobility Holdings Inc.,SP500
-MMM,3M Co.,SP500
-MO,Altria Group Inc,SP500
-MON,Monsanto Co.,SP500
-MOS,The Mosaic Company,SP500
-MPC,MARATHON PETROLEUM ,SP500
-MRK,Merck & Co.,SP500
-MRO,Marathon Oil Corp.,SP500
-MS,Morgan Stanley,SP500
-MSFT,Microsoft Corp.,SP500
-MSI,Motorola Solutions Inc.,SP500
-MTB,M&T Bank Corp.,SP500
-MU,Micron Technology,SP500
-MUR,Murphy Oil,SP500
-MWW,Monster Worldwide,SP500
-MYL,Mylan Inc.,SP500
-NBL,Noble Energy Inc,SP500
-NBR,Nabors Industries Ltd.,SP500
-NDAQ,NASDAQ OMX Group,SP500
-NE,Noble Corp,SP500
-NEE,NextEra Energy Resources,SP500
-NEM,Newmont Mining Corp. (Hldg. Co.),SP500
-NFLX,NetFlix Inc.,SP500
-NFX,Newfield Exploration Co,SP500
-NI,NiSource Inc.,SP500
-NKE,NIKE Inc.,SP500
-NOC,Northrop Grumman Corp.,SP500
-NOV,National Oilwell Varco Inc.,SP500
-NRG,NRG Energy,SP500
-NSC,Norfolk Southern Corp.,SP500
-NTAP,NetApp,SP500
-NTRS,Northern Trust Corp.,SP500
-NUE,Nucor Corp.,SP500
-NVDA,Nvidia Corporation,SP500
-NVLS,Novellus Systems,SP500
-NWL,Newell Rubbermaid Co.,SP500
-NWSA,News Corporation,SP500
-OI,Owens-Illinois Inc,SP500
-OKE,ONEOK,SP500
-OMC,Omnicom Group,SP500
-ORCL,Oracle Corp.,SP500
-ORLY,O'Reilly Automotive,SP500
-OXY,Occidental Petroleum,SP500
-PAYX,Paychex Inc.,SP500
-PBCT,People's United Bank,SP500
-PBI,Pitney-Bowes,SP500
-PCAR,PACCAR Inc.,SP500
-PCG,PG&E Corp.,SP500
-PCL,Plum Creek Timber Co.,SP500
-PCLN,Priceline.com Inc,SP500
-PCP,Precision Castparts,SP500
-PCS,MetroPCS Communications Inc.,SP500
-PDCO,Patterson Companies,SP500
-PEG,Public Serv. Enterprise Inc.,SP500
-PEP,PepsiCo Inc.,SP500
-PFE,Pfizer Inc.,SP500
-PFG,Principal Financial Group,SP500
-PG,Procter & Gamble,SP500
-PGN,Progress Energy Inc.,SP500
-PGR,Progressive Corp.,SP500
-PH,Parker-Hannifin,SP500
-PHM,Pulte Homes Inc.,SP500
-PKI,PerkinElmer,SP500
-PLD,ProLogis,SP500
-PM,Philip Morris International,SP500
-PNC,PNC Financial Services,SP500
-PNW,Pinnacle West Capital,SP500
-POM,Pepco Holdings Inc.,SP500
-PPG,PPG Industries,SP500
-PPL,PPL Corp.,SP500
-PRU,Prudential Financial,SP500
-PSA,Public Storage,SP500
-PWR,Quanta Services Inc.,SP500
-PX,Praxair Inc.,SP500
-PXD,Pioneer Natural Resources,SP500
-QCOM,QUALCOMM Inc.,SP500
-QEP,QEP Resources,SP500
-R,Ryder System,SP500
-RAI,Reynolds American Inc.,SP500
-RDC,Rowan Cos.,SP500
-RF,Regions Financial Corp.,SP500
-RHI,Robert Half International,SP500
-RHT,Red Hat Inc.,SP500
-RL,Polo Ralph Lauren Corp.,SP500
-ROK,Rockwell Automation Inc.,SP500
-ROP,Roper Industries,SP500
-ROST,Ross Stores Inc.,SP500
-RRC,Range Resources Corp.,SP500
-RRD,Donnelley (R.R.) & Sons,SP500
-RSG,Republic Services Inc,SP500
-RSH,RadioShack Corp,SP500
-RTN,Raytheon Co.,SP500
-S,Sprint Nextel Corp.,SP500
-SBUX,Starbucks Corp.,SP500
-SCG,SCANA Corp,SP500
-SCHW,Charles Schwab,SP500
-SE,Spectra Energy Corp.,SP500
-SEE,Sealed Air Corp.(New),SP500
-SHLD,Sears Holdings Corporation,SP500
-SHW,Sherwin-Williams,SP500
-SIAL,Sigma-Aldrich,SP500
-SJM,Smucker (J.M.),SP500
-SLB,Schlumberger Ltd.,SP500
-SLM,SLM Corporation,SP500
-SNA,Snap-On Inc.,SP500
-SNDK,SanDisk Corporation,SP500
-SNI,Scripps Networks Interactive Inc.,SP500
-SO,Southern Co.,SP500
-SPG,Simon Property Group Inc,SP500
-SPLS,Staples Inc.,SP500
-SRCL,Stericycle Inc,SP500
-SRE,Sempra Energy,SP500
-STI,SunTrust Banks,SP500
-STJ,St Jude Medical,SP500
-STT,State Street Corp.,SP500
-STZ,Constellation Brands,SP500
-SUN,Sunoco Inc.,SP500
-SVU,Supervalu Inc.,SP500
-SWK,Stanley Black & Decker,SP500
-SWN,Southwestern Energy,SP500
-SYK,Stryker Corp.,SP500
-SYMC,Symantec Corp.,SP500
-SYY,Sysco Corp.,SP500
-T,AT&T Inc,SP500
-TAP,Molson Coors Brewing Company,SP500
-TDC,Teradata Corp.,SP500
-TE,TECO Energy,SP500
-TEL,TE Connectivity Ltd.,SP500
-TER,Teradyne Inc.,SP500
-TGT,Target Corp.,SP500
-THC,Tenet Healthcare Corp.,SP500
-TIE,Titanium Metals Corp,SP500
-TIF,Tiffany & Co.,SP500
-TJX,TJX Companies Inc.,SP500
-TMK,Torchmark Corp.,SP500
-TMO,Thermo Fisher Scientific,SP500
-TROW,T. Rowe Price Group,SP500
-TRV,The Travelers Companies Inc.,SP500
-TSN,Tyson Foods,SP500
-TSO,Tesoro Petroleum Co.,SP500
-TSS,Total System Services,SP500
-TWC,Time Warner Cable Inc.,SP500
-TWTR,TWITTER,SP500
-TWX,Time Warner Inc.,SP500
-TXN,Texas Instruments,SP500
-TXT,Textron Inc.,SP500
-TYC,Tyco International,SP500
-UNH,United Health Group Inc.,SP500
-UNM,Unum Group,SP500
-UNP,Union Pacific,SP500
-UPS,United Parcel Service,SP500
-URBN,Urban Outfitters,SP500
-USB,U.S. Bancorp,SP500
-UTX,United Technologies,SP500
-V,Visa Inc.,SP500
-VAR,Varian Medical Systems,SP500
-VFC,V.F. Corp.,SP500
-VIA,Viacom Inc.,SP500
-VLO,Valero Energy,SP500
-VMC,Vulcan Materials,SP500
-VNO,Vornado Realty Trust,SP500
-VRSN,Verisign Inc.,SP500
-VTR,Ventas Inc,SP500
-VZ,Verizon Communications,SP500
-WAT,Waters Corporation,SP500
-WDC,Western Digital,SP500
-WEC,Wisconsin Energy Corporation,SP500
-WFC,Wells Fargo,SP500
-WFM,Whole Foods Market,SP500
-WHR,Whirlpool Corp.,SP500
-WIN,Windstream Corporation,SP500
-WM,Waste Management Inc.,SP500
-WMB,Williams Cos.,SP500
-WMT,Wal-Mart Stores,SP500
-WU,Western Union Co,SP500
-WY,Weyerhaeuser Corp.,SP500
-WYN,Wyndham Worldwide,SP500
-WYNN,Wynn Resorts Ltd,SP500
-X,United States Steel Corp.,SP500
-XEL,Xcel Energy Inc,SP500
-XL,XL Capital,SP500
-XLNX,Xilinx Inc,SP500
-XOM,Exxon Mobil Corp.,SP500
-XRAY,Dentsply International,SP500
-XRX,Xerox Corp.,SP500
-XYL,Xylem Inc.,SP500
-YHOO,Yahoo Inc.,SP500
-YUM,Yum Brands Inc,SP500
-ZION,Zions Bancorp,SP500
+########################################           SP500        ###################################
+######################################## Moved to ABC Download  ###################################
