--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -5,6 +5,7 @@ FR0003999481;SBF120;;SBF120;INDICES
 EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 FR0010411884;BX4;;BX4;FUND
 FR0010592014;LVC;;LVC;FUND
+FR0007052782;CAC-ETF;;CAC-ETF;FUND
 ABC000000010;Or (once en $);;OR;FOREX
 ABC000000011;Argent (once en $);;ARGENT;FOREX
 ABC000000012;AUD-JPY;;AUDJPY;FOREX
