--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -6,6 +6,7 @@
 ALVER.PA,VERGNET,EURONEXT
 BUND,PIMCO Germany Bonds,BOND
 BUNL,German BUND ETF,BOND
+CAC.PA,ETF CAC40,FUND
 DBXB.F,EURO BOND 7-10,BOND
 EGPT,EGYPT ETF,INDICES
 FB,Facebook,SP500
