--- a/Report.cfg
+++ b/Report.cfg
@@ -1,15 +1,14 @@
 #Title;Indices
 CAC40;MyIndicators;Daily;200
-CAC40;MyIndicators;TLB;200
 CAC40;MyIndicators;Bar_3;200
-CAC40;TrendLine;Daily;200
-SP500;MyIndicators;Daily;300
+SP500;MyIndicators;Daily;200
+SP500;MyIndicators;Bar_3;200
 #Title;Indicators
 BEAR/BULL Ratio;BullBearRatio;Daily;200
 PCR.EQUITY;PCR_Bench;Daily;200
 VIX;Hilbert;Daily;150
-TB.SBF120;ADBench_SBF120;Daily;500
-TB.SP500;ADBench_SP500;Daily;500
+TB.SBF120;ADBench;Daily;500
+TB.SP500;ADBench;Daily;500
 #Title;Commodities
 #COFFEE C_COT;COT;Weekly;200
 COFFEE;TrailSR_Light;Daily;150
@@ -28,14 +27,6 @@ EURO INDEX;TrailSR_Light;Daily;300
 US DOLLAR INDEX;TrailSR_Light;Daily;300
 #U.S. DOLLAR INDEX_COT;COT;Weekly;150
 JAPANESE YEN;TrailSR_Light;Daily;300
-#JAPANESE YEN_COT;COT;Weekly;150
-#Title;SBF20 Stocks
-AIR FRANCE-KLM;TrailSR_Light;Daily;200
-AIR FRANCE-KLM;TrailSR_Light;TLB;200
-SOITEC SILICON;TrailSR_Light;Daily;200
-SOITEC SILICON;TrailSR_Light;TLB;200
-PEUGEOT;TrailSR_Light;Daily;200
-PEUGEOT;TrailSR_Light;TLB;200
 #Title;Ratio
 SILVER/GOLD;TrailSR_Light;TLB;200
 SP500/GOLD;TrailSR_Light;TLB;200
