--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,6 +1,9 @@
 ISIN,MARKET,NAME
 DE000CR2UB48,CBFR,TURBO BEST CAC40 CALL 3808
-DE000CN82UM5,CBFR,TURBO BEST CAC40 PUT 4800
+DE000CK535Z7,CBFR,TURBO BEST CAC40 CALL 3000
+DE000CN82UM5,CBFR,TURBO BEST CAC40 PUT 4750
+DE000CN1HUW5,CBFR,TURBO BEST CAC40 PUT 5000
+DE000CR7P1R2,CBFR,TURBO BEST CAC40 PUT 6000
 DE000CN83UT8,CBFR,TURBO BEST CRUDE CALL 19
 DE000CD07RP2,CBFR,TURBO BEST EUROBUND PUT 180
 DE000CR5TNW2,CBFR,TURBO COPPER CALL 1.91
