--- a/GoogleIntradayDownload.user.cfg
+++ b/GoogleIntradayDownload.user.cfg
@@ -31,6 +31,7 @@ EPA:DSY,INT_DASSAULT SYSTEMES,INTRADAY
 EPA:EC,INT_TOTAL GABON,INTRADAY
 EPA:ECP,INT_EUROPACORP,INTRADAY
 EPA:EDF,INT_EDF,INTRADAY
+EPA:EI,INT_ESSILOR,INTRADAY
 EPA:EKI,INT_EKINOPS,INTRADAY
 EPA:ENGI,INT_ENGIE,INTRADAY
 EPA:ERA,INT_ERAMET,INTRADAY
