--- a/YahooDownload.user.cfg
+++ b/YahooDownload.user.cfg
@@ -25,6 +25,7 @@ SMH,Semiconductors,SECTORS
 TAN,Guggenheim Solar ,SECTORS
 THD,iShares MSCI Thailand,FUND
 TLT,20+ Years T-Bonds,BOND
+TOU.PA,TOUPARGEL GROUPE,EURONEXT
 TWTR,TWITTER,SP500
 XME,METAL & MINING,SECTORS
 XOP,OIL & GAS EXPLORER,SECTORS
