Update Intraday download

--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -19,3 +19,4 @@ DE000CN4Y8A4,CBFR,TURBO COFFEE CALL 0.94
 DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
 DE000CD09MP9,CBFR,TURBO BEST USD_JPY PUT 120
 DE000CK9SGP1,CBFR,TURBO BEST USD_JPY CALL 96.6
+DE000CD21RX7,CBFR,TURBO PUT VIX 33
