Remove BT turbos

--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,6 +1,5 @@
 ISIN,MARKET,NAME
 DE000CK535Z7,CBFR,TURBO BEST CAC40 CALL 3000
-DE000CD0ACX0,CBFR,TURBO BEST CAC40 CALL 4100
 DE000CN82UM5,CBFR,TURBO BEST CAC40 PUT 4750
 DE000CN1HUW5,CBFR,TURBO BEST CAC40 PUT 5000
 DE000CR7P1R2,CBFR,TURBO BEST CAC40 PUT 6000
@@ -11,7 +10,7 @@ DE000CR5U4N0,CBFR,TURBO EURUSD CALL
 DE000CN1H7D4,CBFR,TURBO EURUSD PUT 
 DE000CZ5MTB8,CBFR,TURBO BEST GOLD PUT 1385
 DE000CD094C3,CBFR,TURBO BEST GOLD CALL 1059
-DE000CR2V2K2,CBFR,TURBO BEST SILVER PUT 18.58
+DE000CR5V516,CBFR,TURBO BEST SILVER PUT 21.41
 DE000CN1HHP6,CBFR,TURBO BEST SILVER CALL 12.11
 DE000CN50GA6,CBFR,TURBO McDonalds PUT 142
 DE000CN4ZZF5,CBFR,TURBO McDonalds CALL 97
